test_case/rust-lang_rust/34609_231270671_1.rs

let p = &0_usize as usize;
// error: casting `&usize` as `usize` is invalid
